--- a/libft/Makefile
+++ b/libft/Makefile
@@ -3,10 +3,10 @@
 #                                                         :::      ::::::::    #
 #    Makefile                                           :+:      :+:    :+:    #
 #                                                     +:+ +:+         +:+      #
-#    By: flormich <flormich@student.42wolfsburg.de> +#+  +:+       +#+         #
+#    By: pnuti <pnuti@student.42wolfsburg.de>       +#+  +:+       +#+         #
 #                                                 +#+#+#+#+#+   +#+            #
 #    Created: 2021/07/18 22:32:44 by flormich          #+#    #+#              #
-#    Updated: 2021/10/17 13:07:52 by flormich         ###   ########.fr        #
+#    Updated: 2021/11/17 15:27:58 by pnuti            ###   ########.fr        #
 #                                                                              #
 # **************************************************************************** #
 
@@ -24,7 +24,8 @@ SRC = ft_memset.c ft_bzero.c ft_memcpy.c ft_memccpy.c ft_memmove.c \
 		ft_lstnew.c ft_lstadd_front.c ft_lstadd_back.c ft_lstsize.c \
 		ft_lstlast.c ft_lstdelone.c ft_lstclear.c ft_lstiter.c ft_lstmap.c \
 		ft_itoa.c ft_itoa_unsigned_int.c ft_itoa_with_sign.c \
-		ft_itoa_without_sign.c ft_itohex.c ft_isspace.c
+		ft_itoa_without_sign.c ft_itohex.c ft_isspace.c ft_2darr_len.c \
+		ft_len_until_char.c
 
 OBJ = $(SRC:.c=.o)
 
